--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.scss
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.scss
@@ -1,10 +1,16 @@
 .back {
+  display: inline-block;
+  text-align: center;
+  padding-top: 22px;
   margin-top: 10px;
   margin-left: 15px;
   width: 150px;
   height: 50px;
   background-color: transparent;
   font-size: 20px;
+  color: black;
+  text-decoration: none;
+  border: 1px solid black;
 }
 .back:hover {
   background-color: #000;
